# zso-zal1

./: .gitignore  CMakeLists.txt  README-PL.md  README.txt  build-loader.sh  debug.h  lazy-resolve.s  loader.c  loader.h  loader_private.h  run-tests.sh
other/: notes.html
src/: debug.h  lazy-resolve.s  loader.c  loader_private.h  readElf.c
test/: run_test.c
tests/: Makefile  README  addsub.c  hello.c  hello.h  lazy.c  loader.h  ptr.c  regparm.c  run_tests.sh  testaddsub.c  testhello.c  testlazy.c  testptr.c  testregparm.c  testtextrel.c  testvar.c  textrel.c  var.c  z1_test.tar
